[package]
name = "tfs-fuse-sys"
version = "0.1.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
description = "Low-level, incomplete fuse bindings for use in tfs."
documentation = "https://crates.fyi/crates/tfs-fuse-sys/0.1.1"
repository = "https://github.com/terminalcloud/tfs"
license = "GPL-3.0+"
build = "build.rs"

[dependencies]
libc = "0.2"
nix = "0.5"
scoped-pool = "0.1"

[dev-dependencies]
tempfile = "2.0"
tempdir = "0.3"
scopeguard = "0.1"

tfs-file-ext = { path = "../tfs-file-ext", version = "0.1" }

[build-dependencies]
pkg-config = "0.3"

